# SEPATgBot

./: CMakeLists.txt
scripts/: ai.py  cmdline.py  server.py  tricks.py
src/: CMakeLists.txt  main.cpp
